<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mil.nga.geopackage</groupId>
	<artifactId>geopackage</artifactId>
	<version>6.5.1</version>
	<packaging>jar</packaging>
	<name>GeoPackage</name>
	<url>https://github.com/ngageoint/geopackage-java</url>
	<description>GeoPackage Java implementation</description>
	<scm>
		<url>git@github.com:ngageoint/geopackage-java.git</url>
		<connection>scm:git:git@github.com:ngageoint/geopackage-java.git</connection>
		<developerConnection>scm:git:git@github.com:ngageoint/geopackage-java.git</developerConnection>
	</scm>
	<licenses>
		<license>
			<name>The MIT License (MIT)</name>
			<url>https://github.com/ngageoint/geopackage-java/blob/master/LICENSE.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>National Geospatial-Intelligence Agency</name>
		<url>https://www.nga.mil/</url>
	</organization>
	<developers>
		<developer>
			<id>bosborn</id>
			<name>Brian Osborn</name>
			<email>bosborn@caci.com</email>
			<organization>BIT Systems</organization>
			<organizationUrl>https://www.caci.com/bit-systems</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>UTC−07</timezone>
		</developer>
	</developers>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>mil.nga.geopackage</groupId>
			<artifactId>geopackage-core</artifactId>
			<version>6.5.1</version>
			<exclusions>
				<exclusion>
					<groupId>com.j256.ormlite</groupId>
					<artifactId>ormlite-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>mil.nga</groupId>
			<artifactId>tiff</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.j256.ormlite</groupId>
			<artifactId>ormlite-jdbc</artifactId>
			<version>6.1</version>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.39.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.xerial.thirdparty</groupId>
			<artifactId>nestedvm</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>standalone</id>
			<build>
				<finalName>${project.artifactId}-${project.version}-standalone</finalName>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.10.1</version>
						<configuration>
							<source>11</source>
							<target>11</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
								<configuration>
									<createDependencyReducedPom>false</createDependencyReducedPom>
									<transformers>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
											<mainClass>mil.nga.geopackage.io.SQLExec</mainClass>
										</transformer>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
											<resource>META-INF/README.md</resource>
											<file>README.md</file>
										</transformer>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
											<resource>META-INF/LICENSE.txt</resource>
											<file>LICENSE.txt</file>
										</transformer>
										<transformer
											implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
											<resource>.txt</resource>
										</transformer>
									</transformers>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<links>
						<link>https://ngageoint.github.io/geopackage-core-java/docs/api/</link>
						<link>https://ngageoint.github.io/projections-java/docs/api/</link>
						<link>https://ngageoint.github.io/coordinate-reference-systems-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-wkb-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-wkt-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-proj-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-geojson-java/docs/api/</link>
						<link>https://ngageoint.github.io/ogc-api-features-json-java/docs/api/</link>
						<link>https://ngageoint.github.io/color-java/docs/api/</link>
						<link>https://ngageoint.github.io/tiff-java/docs/api/</link>
						<link>https://ormlite.com/javadoc/ormlite-core/</link>
						<link>https://ormlite.com/javadoc/ormlite-jdbc/</link>
					</links>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>deploy</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>
